--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,7 @@
-﻿altair==4.2.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
+altair==4.2.0
 asttokens==2.0.5
 async-generator==1.10
 attrs==21.4.0
-backcall==0.2.0
-beautifulsoup4==4.10.0
-bleach==5.0.1
-blinker==1.4
-bs4==0.0.1
 cachetools==5.2.0
 certifi==2021.10.8
 cffi==1.15.0
@@ -43,7 +36,6 @@ jupyter-client==7.3.4
 jupyter-core==4.10.0
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==1.1.1
-kiwisolver==1.4.3
 lxml==4.8.0
 MarkupSafe==2.1.1
 matplotlib==3.5.2
@@ -122,5 +114,4 @@ wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.6.1
 wsproto==1.1.0
-xlwings==0.27.5
 zipp==3.8.0
