--- a/requirements.txt
+++ b/requirements.txt
@@ -56,6 +56,7 @@ parso==0.8.3
 pickleshare==0.7.5
 Pillow==9.1.1
 plotly==5.9.0
+pip==22.2.2
 prometheus-client==0.14.1
 prompt-toolkit==3.0.28
 protobuf==3.20.1
