--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asttokens==2.0.5
 async-generator==1.10
 attrs==21.4.0
 cachetools==5.2.0
+cargo==1.57
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.1.0
