--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pandocfilters==1.5.0
 Pillow==9.1.1
 plotly==5.9.0
 pip==22.2.2
+pyperclip==1.8.2
 python-dateutil==2.8.2
 scikit-learn==1.1.1
 scipy==1.9.0
